Kelvin conversion compatibility added, more name changing for clarity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="insertNumberConvert" />
     <string name="insertNumberConversion">Input the number you\'d like to convert</string>
     <string name="invalidInput">Input a valid number</string>
-    <string name="FahrenheitConversionQuery">Value:\tChoose the unit to convert Fahrenheit degrees to</string>
+    <string name="FahrenheitConversionQuery">Choose the unit to convert Fahrenheit degrees to</string>
+    <string name="KelvinConversionQuery">Choose the unit to convert Kelvin degrees to</string>
 </resources>
