--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="invalidInput">Input a valid number</string>
     <string name="FahrenheitConversionQuery">Choose the unit to convert Fahrenheit degrees to</string>
     <string name="KelvinConversionQuery">Choose the unit to convert Kelvin degrees to</string>
+    <string name="AnswerWillAppearHere">The answer will appear here</string>
 </resources>
